--- a/sites/lancache-single.conf
+++ b/sites/lancache-single.conf
@@ -14,9 +14,21 @@ server {
 	# content5.steampowered.com content6.steampowered.com content7.steampowered.com
 	# content8.steampowered.com *.hsar.steampowered.com.edgesuite.net
 	# *.akamai.steamstatic.com content-origin.steampowered.com client-download.steampowered.com
+    # *.steamcontent.com
 	access_log /var/log/nginx/lancache-steam-access.log main buffer=128k flush=1m;
 	error_log /var/log/nginx/lancache-steam-error.log;
 	include lancache/node-steam;
+}
+
+# riot
+server {
+	listen lancache-riot accept_filter=httpready default;
+	server_name riot _;
+	# DNS entries:
+	# lancache-riot l3cdn.riotgames.com worldwide.l3cdn.riotgames.com
+	access_log /var/log/nginx/lancache-riot-access.log main buffer=128k flush=1m;
+	error_log /var/log/nginx/lancache-riot-error.log;
+	include lancache/node-default;
 }
 
 # blizzard
@@ -68,16 +80,16 @@ server {
 	include lancache/node-default;
 }
 
-# GOG
-server {
-	listen lancache-gog default;
-	server_name gog _;
-	# DNS entries:
-	# lancache-gog cdn.gog.com wpc.11df.deltacdn.net 11df-eu-lb.wpc.edgecastcdn.net 11df-eu-lb.apr-11df.edgecastdns.net
-	access_log /var/log/nginx/lancache-gog-access.log main buffer=128k flush=1m;
-	error_log /var/log/nginx/lancache-gog-error.log;
-	include lancache/node-gog;
-}
+# GOG --- Uses SSL now, can't cache.
+#server {
+#	listen lancache-gog default;
+#	server_name gog _;
+#	# DNS entries:
+#	# lancache-gog cdn.gog.com wpc.11df.deltacdn.net 11df-eu-lb.wpc.edgecastcdn.net 11df-eu-lb.apr-11df.edgecastdns.net
+#	access_log /var/log/nginx/lancache-gog-access.log main buffer=128k flush=1m;
+#	error_log /var/log/nginx/lancache-gog-error.log;
+#	include lancache/node-gog;
+#}
 
 
 # status
